firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
● Waiting for background terminal (0s • esc to …
  └ cargo test -p firefam-core -- --exact…

────────────────────────────────────────────────
  /tmp/project
› Ask Firefam to do anything
────────────────────────────────────────────────
  ? help · / comm… Read Only · gpt-5.5 default
