firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__workspace_member_usage_limit_prompt.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  Usage limit reached
  Request a limit increase from your owner to continue using Firefam. Request increase?

  1. Yes (y)
› 2. No (default) (n)

  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel
